# injection_and_hook

./: Cargo.toml  README.md
libs/load-library-hook/: Cargo.toml
libs/load-library-hook/src/: lib.rs
libs/winmm/: Cargo.toml
libs/winmm/src/: lib.rs  winmm.rs
