[package]
name = "load-library-hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
detour = {workspace = true, default-features=false}

[dependencies.windows]
workspace = true
features=[
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader", 
    "Win32_Networking", 
    "Win32_Networking_WinSock",
    "Win32_System_IO"
]