[package]
name = "winmm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]
name = "winmm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detour = {workspace = true, default-features=false}
[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader", 
    "Win32_System_Diagnostics_Debug",
    "Win32_Networking_WinSock",
    "Win32_System_IO"
]


